# fk

./: .cursorrules  .gitignore  BUGS.md  Cargo.toml  Makefile  README.md
.booger/: index.db
.claude/: settings.local.json
benches/: compare.sh  field_split.rs  lex_parse.rs  record_processing.rs
docs/: awk-vs-fk.md  cheatsheet.md  explain-end-user-plan.md  explain-output-slot-analysis.md  explain-simplify-plan.md  fk.1  perf-baseline.md  phase20-plan.md  progress.md  roadmap.md  session-notes.md
examples/: 01-basics.sh  02-text-transforms.sh  03-advanced.sh  04-fk-features.sh  05-json-and-csv.sh  06-phase8-features.sh  07-array-builtins.sh  07-showcase-vs-awk.sh  08-fk-uplot-aws.sh  11-data-formats.sh  12-text-and-regex.sh  13-statistics.sh  14-sorting-and-dates.sh  15-pipelines.sh  16-etl.sh  17-describe.sh  18-dashboards.sh  19-introspection.sh  20-io-and-program-tools.sh  21-phase20.sh  22-mandelbrot.sh  _helpers.sh
scripts/: bench-compare.sh
showcase/: 01-data-formats.sh  03-statistics.sh  04-sorting-and-dates.sh  05-pipelines.sh  06-etl.sh  07-describe.sh  08-dashboards.sh  _helpers.sh
src/: action.rs  analyze.rs  cli.rs  describe.rs  error.rs  explain.rs  field.rs  input.rs  lexer.rs  lib.rs  main.rs  parser.rs  repl.rs  runtime.rs  tests.rs
src/action/: builtins_rt.rs  eval.rs  mod.rs  stmt.rs
src/builtins/: emoji.rs  json.rs  math.rs  mod.rs  printf.rs  string.rs  time.rs
src/explain/: lower.rs  mod.rs  reduce.rs  render.rs  tests.rs
src/format/: highlight.rs  mod.rs  pretty.rs  theme.rs
src/input/: csv.rs  json.rs  (+4 more)
testdata/: edge_cases.csv
(+6 files in other folders)
