[package]
name = "fk"
version = "0.1.0"
edition = "2024"
description = "A slightly modernized awk clone built in Rust"
license = "MIT"
repository = "https://github.com/CryptArtificer/fk"
keywords = ["awk", "text-processing", "cli", "filter"]
categories = ["command-line-utilities", "text-processing"]

[features]
default = ["parquet"]
parquet = ["dep:parquet", "dep:arrow"]

[dependencies]
regex = "1.12.3"
parquet = { version = "54", optional = true, default-features = false, features = ["arrow", "snap", "zstd", "lz4"] }
arrow = { version = "54", optional = true, default-features = false, features = ["prettyprint"] }

[dev-dependencies]
criterion = "0.8.2"

[[bench]]
name = "field_split"
harness = false

[[bench]]
name = "lex_parse"
harness = false

[[bench]]
name = "record_processing"
harness = false
